# dagster-template

./: .gitignore  Jenkinsfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
dagster_poc/: __init__.py  assets.py  conftest.py  jobs.py  jobs_test.py
dagster_poc/utils/: database.py  database_test.py  types.py
dagster_poc_tests/: test_assets.py
docker/: Dockerfile
