[tool.poetry]
name = "dagster-poc"
version = "0.1.0"
description = ""
authors = ["Jakob J. Kolb <jakob.j.kolb@gmail.com>"]
readme = "README.md"
packages = [{include = "dagster_poc"}]

[tool.dagster]
module_name = "dagster_poc"

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^1.2.2"
dagit = "^1.2.2"
pandas = "^1.5.3"
ramda = "^0.7.6"
requests = "^2.28.2"
matplotlib = "^3.7.1"
wordcloud = "^1.8.2.2"
duckdb = "0.8.0"
dagster-graphql = "^1.3.9"
dagster-postgres = "^0.19.9"
dagster-k8s = "^0.19.9"
dagster-duckdb-pandas = "^0.19.9"
dagster-duckdb = "^0.19.9"
pyodbc = "^4.0.39"
pymssql = "^2.2.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
pytest-watch = "^4.2.0"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
exclude = ".git,__pycache__,.venv,.eggs,*.egg,build,dist,venv"

